# pdf-letterhead

./: .gitignore  README.md  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
electron/: tsconfig.json
electron/main/: fileDialogs.ts  i18n.ts  index.ts  pdfProcessor.ts
electron/preload/: index.ts
locales/: de.json  en.json  pl.json
scripts/: postprocess-nuxt-static.mjs
shared/: ipc.js  ipc.ts  types.ts
src/: app.config.ts  app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src/assets/css/: main.css
src/components/: FileSelector.vue  InputFilesList.vue  LanguageSwitcher.vue  ProcessingStatus.vue  SummaryCard.vue
src/composables/: useI18n.ts  usePdfGenerator.ts
src/types/: electron.d.ts
